--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="dist/css/index.css">
-    <title>PUG</title>
+    <title>JOB</title>
   </head>
   <body>
     <header id="home">
-      <div class="container-fluid"></div>
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center"><a class="navbar-brand hidden-lg" href="#home">
+            <h3>Job</h3></a>
+          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active"><a class="nav-link" href="#about">Tech Careers </a></li>
+              <li class="nav-item"><a class="nav-link" href="#downloads">Career Explorer </a></li>
+              <li class="nav-item"><a class="nav-link" href="#plans">Insights </a></li>
+            </ul>
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item"><a class="nav-link" href="#contact">Contact Sales </a></li>
+              <li class="nav-item"><a class="nav-link" href="#about">For Employers  </a></li>
+              <li class="nav-item"><a class="nav-link" href="#downloads">Login/Register</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" id="MobileMenu" style="left:0px; display:none; top: 0px;"><a class="w3-bar-item  w3-large closebtn"></a><a class="nav-link1en nav-link1">Tech Careers </a><a class="nav-link1en nav-link1">Career Explorer </a><a class="nav-link1en nav-link1">Insights </a><a class="nav-link1en nav-link1">Contact Sales</a><a class="nav-link1en nav-link1">Login/Register</a></div>
+        <div class="text-center header-body"></div>
+      </div>
     </header>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="dist/js/index.js"></script>
   </body>
 </html>
