--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="dist/css/index.css">
     <title>JOB</title>
   </head>
   <body>
     <header id="home">
-      <div class="container-fluid">
+      <div class="container-fluid row">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center"><a class="navbar-brand hidden-lg" href="#home">
             <h3>Job</h3></a>
           <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
@@ -24,12 +23,13 @@
             </ul>
           </div>
         </nav>
-        <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" id="MobileMenu" style="left:0px; display:none; top: 0px;"><a class="w3-bar-item  w3-large closebtn"></a><a class="nav-link1en nav-link1">Tech Careers </a><a class="nav-link1en nav-link1">Career Explorer </a><a class="nav-link1en nav-link1">Insights </a><a class="nav-link1en nav-link1">Contact Sales</a><a class="nav-link1en nav-link1">Login/Register</a></div>
-        <div class="text-center header-body"></div>
+        <div class="sidenav" id="mySidenav"><a class="closebtn" href="javascript:void(0)" onclick="closeNav()">&times;</a><a class="nav-link" href="#">Tech Careers </a><a class="nav-link" href="#">Career Explorer</a><a class="nav-link" href="#">Insights </a><a class="nav-link" href="#">Contact Sales </a><a class="nav-link" href="#about">For Employers </a><a class="nav-link" href="#downloads">Login/Register</a></div><span class="open" style="font-size:30px;cursor:pointer; display:none;" onclick="openNav()">&#9776;</span>
+        <div class="text-center header-body"><img class="header-image" src="dist/image/header-image.jpg" alt="jobأeader"></div>
       </div>
     </header>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="dist/js/index.js"></script>
   </body>
 </html>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<script src="dist/js/index.js"></script>
