--- a/index.html
+++ b/index.html
@@ -25,18 +25,31 @@
           </div>
         </nav>
         <div class="sidenav" id="mySidenav"><a class="closebtn" href="" onclick="closeNav()">&times;</a><a class="nav-link" href="#">Tech Careers </a><a class="nav-link" href="#">Career Explorer</a><a class="nav-link" href="#">Insights </a><a class="nav-link" href="#">Contact Sales </a><a class="nav-link" href="#about">For Employers </a><a class="nav-link" href="#downloads">Login/Register</a></div><span class="open" style="font-size:30px;cursor:pointer; display:none;" onclick="openNav()">&#9776;</span>
-        <div class="text-center header-body col-12">
-          <div class="form row text-center">
-            <div class="col-12 text-center text-header">
-              <h2>Search 78,263 tech jobs. Find yours today.</h2>
+        <div class="overlay">
+          <div class="text-center header-body col-12">
+            <div class="form row text-center">
+              <div class="col-12 text-center text-header">
+                <h2>Search 78,263 tech jobs. Find yours today.</h2>
+              </div>
+              <input class="col-lg-4" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
+              <input class="col-lg-4" type="text" placeholder="Zip Code, City or State">
+              <button class="text-center search-btn btn">Search</button>
             </div>
-            <input class="col-lg-4" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
-            <input class="col-lg-4" type="text" placeholder="Zip Code, City or State">
-            <button class="text-center search-btn btn">Search</button>
           </div>
         </div>
       </div>
     </header>
+    <section id="companies">
+      <div class="container-fluid row">
+        <div class="companies_header col-12">
+          <h4>Top companies on Job Searching</h4>
+        </div>
+        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
+        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
+        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
+        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
+      </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
