create feature section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" type="image/png" href="dist/image/logo.png" sizes="16x16">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="dist/css/index.css">
@@ -41,13 +42,32 @@
     </header>
     <section id="companies">
       <div class="container-fluid row">
-        <div class="companies_header col-12">
-          <h4>Top companies on Job Searching</h4>
+        <div class="companies_header col-10">
+          <div class="most"><i class="fa fa-building"> </i>
+            <h4>Top companies on Job Searching</h4>
+          </div>
         </div>
-        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
-        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
-        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
-        <div class="col-lg-3 text-center"><img src="dist/image/dell.png" alt="DEL"></div>
+        <div class="col-lg-2 text-center companies-logo"><img class="logo-image" src="dist/image/dell.png" alt="DEL"></div>
+        <div class="col-lg-2 text-center companies-logo"><img class="logo-image" src="dist/image/marketo.png" alt="marketo"></div>
+        <div class="col-lg-2 text-center companies-logo"><img class="logo-image" src="dist/image/Deloitte_black_logo.png" alt="Deloitte_black_logo"></div>
+        <div class="col-lg-2 text-center companies-logo"><img class="logo-image" src="dist/image/UnitedHealthGroup.png" alt="UnitedHealthGroup"></div>
+        <div class="col-lg-2 text-center companies-logo"><img class="logo-image" src="dist/image/company-logo.jpg" alt="UnitedHealthGroup"></div>
+      </div>
+    </section>
+    <section id="competition">
+      <div class="container-fluid row">
+        <div class="competition-image1 col-6"></div>
+        <div class="competition-descraption col-6">
+          <h2>Beat your competition</h2>
+          <p>We've got answers to all your burning questions on interviews, resumes, networking, and job hunting skills.</p>
+          <button class="career btn"> <a href="#">career toolkit</a></button>
+        </div>
+        <div class="competition-descraption col-6 competition-descraption2">
+          <h2>Know your worth</h2>
+          <p>Predict the salary you can earn based on your unique skillset, job title, experience, and location.</p>
+          <button class="salary btn"> <a href="#">Salary Predictor</a></button>
+        </div>
+        <div class="competition-image2 col-6"></div>
       </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
