--- a/index.html
+++ b/index.html
@@ -56,20 +56,82 @@
     </section>
     <section id="competition">
       <div class="container-fluid row">
-        <div class="competition-image1 col-6"></div>
-        <div class="competition-descraption col-6">
+        <div class="competition-image1 col-lg-6 col-md-6 col-sm-12"></div>
+        <div class="competition-descraption col-lg-6 col-md-6 col-sm-12">
           <h2>Beat your competition</h2>
           <p>We've got answers to all your burning questions on interviews, resumes, networking, and job hunting skills.</p>
           <button class="career btn"> <a href="#">career toolkit</a></button>
         </div>
-        <div class="competition-descraption col-6 competition-descraption2">
+        <div class="competition-descraption col-lg-6 col-md-6 col-sm-12 competition-descraption2">
           <h2>Know your worth</h2>
           <p>Predict the salary you can earn based on your unique skillset, job title, experience, and location.</p>
           <button class="salary btn"> <a href="#">Salary Predictor</a></button>
         </div>
-        <div class="competition-image2 col-6"></div>
+        <div class="competition-image2 col-lg-6 col-md-6 col-sm-12"></div>
       </div>
     </section>
+    <footer id="footer">
+      <div class="container-fluid row">
+        <div class="col-lg-2 footer-body col-md-4 col-sm-6">
+          <ul> 
+            <li>Job Seekers</li>
+            <li> <a href="#">International Jobs </a></li>
+            <li> <a href="#">Blog </a></li>
+            <li> <a href="#">Career Insights</a></li>
+            <li> <a href="#">Talent Networks</a></li>
+            <li> <a href="#">Sitemap</a></li>
+            <li> <a href="#">Accessibility</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 footer-body col-md-4 col-sm-6">
+          <ul> 
+            <li>Help Center</li>
+            <li> <a href="#">Manage Email</a></li>
+            <li> <a href="#">Reset Password</a></li>
+            <li> <a href="#">Customer Support</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 footer-body col-md-4 col-sm-6">
+          <ul> 
+            <li>Employers</li>
+            <li> <a href="#">Browse Products </a></li>
+            <li> <a href="#">Post Jobs</a></li>
+            <li> <a href="#">Recruiting Solutions</a></li>
+            <li> <a href="#">Screening</a></li>
+            <li> <a href="#">HCM</a></li>
+            <li> <a href="#">Advertise with Us</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 footer-body col-md-4 col-sm-6">
+          <ul> 
+            <li>CareerBuilder</li>
+            <li> <a href="#">About Us</a></li>
+            <li> <a href="#">Work at CareerBuilder</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 footer-body col-md-4 col-sm-6">
+          <ul> 
+            <li>Stay Connected</li>
+            <li> <a href="#"> <i class="fa fa-twitter-square"> Twitter</i></a></li>
+            <li> <a href="#"> <i class="fa fa-instagram"> Instagram</i></a></li>
+            <li> <a href="#"> <i class="fa fa-youtube"> Youtube</i></a></li>
+            <li> <a href="#"> <i class="fa fa-facebook"> Facebook</i></a></li>
+            <li> <a href="#"> <i class="fa fa-google-plus"> Google Plus</i></a></li>
+            <li> <a href="#"> <i class="fa fa-pinterest"> Pinterest</i></a></li>
+            <li> <a href="#"> <i class="fa fa-linkedin"> LinkedIn</i></a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 footer-body col-md-4 col-sm-6">
+          <ul> 
+            <li>Legal</li>
+            <li> <a href="#">Security & Fraud</a></li>
+            <li> <a href="#">Privacy Policy</a></li>
+            <li> <a href="#">Terms</a></li>
+            <li> <a href="#">Data Subject Access Request</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
