--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
               <div class="col-12 text-center text-header">
                 <h2>Search 78,263 tech jobs. Find yours today.</h2>
               </div>
-              <input class="col-lg-4" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
-              <input class="col-lg-4" type="text" placeholder="Zip Code, City or State">
+              <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
+              <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Zip Code, City or State">
               <button class="text-center search-btn btn">Search</button>
             </div>
           </div>
@@ -112,13 +112,13 @@
         <div class="col-lg-2 footer-body col-md-4 col-sm-6">
           <ul> 
             <li>Stay Connected</li>
-            <li> <a href="#"> <i class="fa fa-twitter-square"> Twitter</i></a></li>
-            <li> <a href="#"> <i class="fa fa-instagram"> Instagram</i></a></li>
-            <li> <a href="#"> <i class="fa fa-youtube"> Youtube</i></a></li>
-            <li> <a href="#"> <i class="fa fa-facebook"> Facebook</i></a></li>
-            <li> <a href="#"> <i class="fa fa-google-plus"> Google Plus</i></a></li>
-            <li> <a href="#"> <i class="fa fa-pinterest"> Pinterest</i></a></li>
-            <li> <a href="#"> <i class="fa fa-linkedin"> LinkedIn</i></a></li>
+            <li> <a href="#"> <i class="fab fa-twitter-square">  Twitter</i></a></li>
+            <li> <a href="#"> <i class="fab fa-instagram">  Instagram</i></a></li>
+            <li> <a href="#"> <i class="fab fa-youtube-square">  Youtube</i></a></li>
+            <li> <a href="#"> <i class="fab fa-facebook">  Facebook</i></a></li>
+            <li> <a href="#"> <i class="fab fa-google-plus-square">  Google Plus</i></a></li>
+            <li> <a href="#"> <i class="fab fa-pinterest-square">  Pinterest</i></a></li>
+            <li> <a href="#"> <i class="fab fa-linkedin"> LinkedIn</i></a></li>
           </ul>
         </div>
         <div class="col-lg-2 footer-body col-md-4 col-sm-6">
