--- a/index.html
+++ b/index.html
@@ -40,6 +40,100 @@
         </div>
       </div>
     </header>
+    <header id="job">
+      <div class="container-fluid row">
+        <div class="col-lg-4 job-search">
+          <div style="float:left;width:300px;">
+            <div id="accordion">
+              <ul>
+                <li class="li">
+                  <div> 
+                    <p class="p">Location <i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li><a href="?11"> 
+                        <input type="text" placeholder="Enter Your Location to search"></a></li>
+                  </ul>
+                </li>
+                <li class="li">
+                  <div> 
+                    <p class="p">Job Function<i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li>
+                      <input type="checkbox" name="all" value="all">  All
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Administrative
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Advocacy
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Community Engagement/Outreach
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Development/Fundraising
+                    </li>
+                    <li> 
+                      <input type="checkbox" name="vehicle1" value="Bike">  Program Management
+                    </li>
+                  </ul>
+                </li>
+                <li class="li">
+                  <div> 
+                    <p class="p">Issue Areas<i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li><a class="link" href="?31"> </a></li>
+                  </ul>
+                </li>
+                <li class="li">
+                  <div> 
+                    <p class="p">Education Level<i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li><a class="link" href="?41"> </a></li>
+                  </ul>
+                </li>
+                <li class="li">
+                  <div> 
+                    <p class="p">Professional Level<i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li><a class="link" href="?51"> </a></li>
+                  </ul>
+                </li>
+                <li class="li">
+                  <div> 
+                    <p class="p">Full Time / Part Time<i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li><a class="link" href="?61"> </a></li>
+                  </ul>
+                </li>
+                <li class="li">
+                  <div> 
+                    <p class="p">Remote / On-Site<i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li><a class="link" href="?71"> </a></li>
+                  </ul>
+                </li>
+                <li class="li">
+                  <div> 
+                    <p class="p">Org Type<i class="fas fa-plus"></i></p>
+                  </div>
+                  <ul>
+                    <li><a class="link" href="?81"> </a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
     <section id="companies">
       <div class="container-fluid row">
         <div class="companies_header col-10">
@@ -135,6 +229,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="dist/js/jquery-1.12.1.min.js"></script>
+    <script src="dist/js/accordion-menu.js"></script>
     <script src="dist/js/index.js"></script>
   </body>
 </html>
