--- a/index.html
+++ b/index.html
@@ -85,7 +85,24 @@
                     <p class="p">Issue Areas<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li><a class="link" href="?31"> </a></li>
+                    <li>
+                      <input type="checkbox" name="all" value="all">  All
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Children & Youth
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Community Development
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Education
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Health & Medicine
+                    </li>
+                    <li> 
+                      <input type="checkbox" name="vehicle1" value="Bike">  Volunteering
+                    </li>
                   </ul>
                 </li>
                 <li class="li">
@@ -93,7 +110,24 @@
                     <p class="p">Education Level<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li><a class="link" href="?41"> </a></li>
+                    <li>
+                      <input type="checkbox" name="all" value="all">  All
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  2-Year Degree Required
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  4-Year Degree Required
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Doctorate (PhD) Required
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  High School Diploma Required
+                    </li>
+                    <li> 
+                      <input type="checkbox" name="vehicle1" value="Bike">  J.D. Required 
+                    </li>
                   </ul>
                 </li>
                 <li class="li">
@@ -101,7 +135,24 @@
                     <p class="p">Professional Level<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li><a class="link" href="?51"> </a></li>
+                    <li>
+                      <input type="checkbox" name="all" value="all">  All
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Entry level
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Executive
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Managerial
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  None specified
+                    </li>
+                    <li> 
+                      <input type="checkbox" name="vehicle1" value="Bike">  Professional
+                    </li>
                   </ul>
                 </li>
                 <li class="li">
@@ -109,7 +160,15 @@
                     <p class="p">Full Time / Part Time<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li><a class="link" href="?61"> </a></li>
+                    <li>
+                      <input type="checkbox" name="all" value="all">  All
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Full Time 
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Part Time
+                    </li>
                   </ul>
                 </li>
                 <li class="li">
@@ -117,7 +176,15 @@
                     <p class="p">Remote / On-Site<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li><a class="link" href="?71"> </a></li>
+                    <li>
+                      <input type="checkbox" name="all" value="all">  All
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Remote 
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  On-Site
+                    </li>
                   </ul>
                 </li>
                 <li class="li">
@@ -125,7 +192,24 @@
                     <p class="p">Org Type<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li><a class="link" href="?81"> </a></li>
+                    <li>
+                      <input type="checkbox" name="all" value="all">  All
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Consultant
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Government
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Nonprofit
+                    </li>
+                    <li>
+                      <input type="checkbox" name="vehicle1" value="Bike">  Recruiter
+                    </li>
+                    <li> 
+                      <input type="checkbox" name="vehicle1" value="Bike">  Social Enterprise  
+                    </li>
                   </ul>
                 </li>
               </ul>
